--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.0.0",
     "react-textarea-autosize": "^8.5.7",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.0.1",
