--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "@ai-sdk/openai": "^1.1.13",
     "@clerk/nextjs": "^6.12.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/supabase-js": "^2.49.3",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -27,8 +30,10 @@
     "ai": "^4.1.45",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.7",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.475.0",
+    "nanoid": "^5.1.5",
     "next": "^15.1.7",
     "next-themes": "^0.4.4",
     "openai": "^4.85.4",
@@ -38,8 +43,9 @@
     "react-markdown": "^10.0.0",
     "react-textarea-autosize": "^8.5.7",
     "react-wrap-balancer": "^1.1.1",
-    "tailwind-merge": "^3.0.1",
-    "typescript": "^5.7.3"
+    "tailwind-merge": "^3.0.2",
+    "typescript": "^5.7.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
