--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.3",
-    "@types/node": "^22.13.5",
-    "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-textarea-autosize": "^4.3.6",
     "ai": "^4.1.45",
@@ -44,13 +42,15 @@
     "react-textarea-autosize": "^8.5.7",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^3.0.2",
-    "typescript": "^5.7.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/node": "22.13.14",
+    "@types/react": "19.0.12",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.8.2"
   }
 }
