--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@types/node": "22.13.14",
     "@types/react": "19.0.12",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.25.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "typescript": "5.8.2"
