--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@types/react": "19.0.12",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.25.0",
+    "eslint-config-next": "^15.3.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0",
     "typescript": "5.8.2"
